elasticsearch/poc-cicd-jenkins-kind-elastic/prod/k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    pod-security.kubernetes.io/enforce: baseline
