elasticsearch/poc-cicd-jenkins-kind-elastic/prod/k8s/app/networkpolicy-allow-otel-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-otel-egress
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: observability
    ports:
    - protocol: TCP
      port: 4317
    - protocol: TCP
      port: 4318
